[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/55TacBoardShaded.png" type="Texture" id=1]
[ext_resource path="res://FieldButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://GameState.gd" type="Script" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 550.0
margin_bottom = 550.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 520.0
margin_bottom = 520.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FieldButton1" parent="GridContainer" instance=ExtResource( 2 )]
margin_right = 150.0
margin_bottom = 150.0

[node name="FieldButton2" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 170.0
margin_right = 320.0
margin_bottom = 150.0

[node name="FieldButton3" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 340.0
margin_right = 490.0
margin_bottom = 150.0

[node name="FieldButton4" parent="GridContainer" instance=ExtResource( 2 )]
margin_top = 170.0
margin_right = 150.0
margin_bottom = 320.0

[node name="FieldButton5" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 170.0
margin_top = 170.0
margin_right = 320.0
margin_bottom = 320.0

[node name="FieldButton6" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 340.0
margin_top = 170.0
margin_right = 490.0
margin_bottom = 320.0

[node name="FieldButton7" parent="GridContainer" instance=ExtResource( 2 )]
margin_top = 340.0
margin_right = 150.0
margin_bottom = 490.0

[node name="FieldButton8" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 170.0
margin_top = 340.0
margin_right = 320.0
margin_bottom = 490.0

[node name="FieldButton9" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 340.0
margin_top = 340.0
margin_right = 490.0
margin_bottom = 490.0

[node name="GameState" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="pressed" from="GridContainer/FieldButton1" to="." method="_on_FieldButton1_pressed"]
[connection signal="pressed" from="GridContainer/FieldButton2" to="." method="_on_FieldButton2_pressed"]
[connection signal="pressed" from="GridContainer/FieldButton3" to="." method="_on_FieldButton3_pressed"]
[connection signal="pressed" from="GridContainer/FieldButton4" to="." method="_on_FieldButton4_pressed"]
[connection signal="pressed" from="GridContainer/FieldButton5" to="." method="_on_FieldButton5_pressed"]
[connection signal="pressed" from="GridContainer/FieldButton6" to="." method="_on_FieldButton6_pressed"]
[connection signal="pressed" from="GridContainer/FieldButton7" to="." method="_on_FieldButton7_pressed"]
[connection signal="pressed" from="GridContainer/FieldButton8" to="." method="_on_FieldButton8_pressed"]
[connection signal="pressed" from="GridContainer/FieldButton9" to="." method="_on_FieldButton9_pressed"]
